# orion-fly

./: .env.example  .gitignore  .replit  Dockerfile  README.md  account_manager.py  ai_enhancer.py  autonomous_applicator.py  bot.py  captcha_solver.py  conversation_layer.py  daily_report.py  earnings.json  freelancer_ai.py  freelancer_apply.py  freelancer_bot.py  freelancer_job_fetcher.py  gdrive_backup.py  generate_with_fallback.py  job_applicator.py  job_fetcher.py  job_handler.py  kill bird  llm.py  llm_engine.py  logger.py  logic_test_framework.py  openrouter.py  openrouter_utils.py  orion_auto.sh  orion_fallback.py  orion_model_choices.json  orion_model_selector.py  orion_multi.py  orion_phase8_core.py  orion_simulation_runner.py  orion_telegram_stream.py  phase17_orchestration.py  railway.json  requirements.txt  (+19 more)
ai_builder/: ai_build_manager.py
brain/: agent.py  auto_improve.py  self_awareness.py
builder/: __init__.py  apply_and_push.py  audit.py  gen_patch.py  refiner.py  test_runner.py
core/: admin_commands.py  boot.py  self_updater.py  vpn_manager.py
dashboard/: terminal_ui.py
debug/: job_applicator_debug.py
fly-ollama/: Dockerfile
freelance/: bidder.py  freelancer_manager.py  profile_editor.py
freelancing/: profile_editor.py
job_types/: code_runner.py  writer_runner.py
jobs/: job_1093143.json  job_1093144.json  job_1093146.json  (+95 more)
orion-fly/: pyproject.toml
orion-fly/scripts/: ai_job_handler.py  auto_apply.py  daily_report.py  fetch_jobs.py  job_applicator.py  scheduler.py  storage_monitor.py  test_telegram.py
orion-fly/utils/: telegram.py
(+99 files in other folders)
