[tool.poetry]
name = "orion-fly"
version = "0.1.0"
description = ""
authors = ["David muigai <42955651-muigaid682@users.noreply.replit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
